--- a/style.css
+++ b/style.css
@@ -1,8 +1,8 @@
 .cabecalho {
     background-color: rgb(52, 89, 114);
     color:rgb(255, 255, 255)
-    
-    flex
+
+  display; flex-direction: 
 
 }
 
