--- a/style.css
+++ b/style.css
@@ -2,6 +2,8 @@
     background-color: rgb(52, 89, 114);
     color:rgb(255, 255, 255)
 
+   justify-content: space-around
+
 }
 
 .cabecalho-imagem{
