--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@
     color:rgb(255, 255, 255)
 
     display: flex
-   justify-content: space-around
+   justify-content: space-around;
 
 }
 
@@ -11,6 +11,11 @@
 
 width:20%
 
+}
 
+.cabecalho-item{
+ display: inline-block;
+
+ margin: 0 16px;
 
 }
